# VMS

./: .gitignore  BUILD_WINDOWS.md  BUILD_WSL.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  PHASE0_COMPLETION.md  PHASE1_COMPLETION.md  PHASE2_NETWORK.md  README.md  build_windows.ps1  build_wsl.sh
.github/workflows/: cmake-multi-platform.yml
cmake/: FindNVDEC.cmake
config/: config.yaml.template
src/client/: CMakeLists.txt
src/common/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/codec/: cpu_decoder.cpp  cpu_decoder.h  decoder_factory.cpp  decoder_factory.h  decoder_interface.h  nvdec_decoder.cpp  nvdec_decoder.h  types.h
src/core/gpu/: cuda_context.cpp  cuda_context.h  memory_pool.cpp  memory_pool.h
src/core/network/: bitstream_parser.cpp  bitstream_parser.h  h264_parser.cpp  h264_parser.h  rtp_depacketizer.cpp  rtp_depacketizer.h  rtsp_client.cpp  rtsp_client.h  types.h
src/core/stream/: CMakeLists.txt  camera_stream.cpp  camera_stream.h  pipeline.cpp  pipeline.h  stream_manager.cpp  stream_manager.h
src/core/threading/: CMakeLists.txt  bounded_queue.h  decode_thread_pool.cpp  decode_thread_pool.h  network_thread_pool.cpp  network_thread_pool.h  thread_pool.cpp  thread_pool.h
src/recording/: CMakeLists.txt
src/server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt  decoder_test.cpp  hardware_detect.cpp  network_test.cpp
